Added basic frontend using nextjs and added authentication using auth0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "yarn@1.22.19",
   "workspaces": [
-    "apis/*",
+    "apps/*",
     "packages/*",
     "packages/apis/*"
   ],
