--- a/apis/gateway/package.json
+++ b/apis/gateway/package.json
@@ -12,20 +12,21 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "dotenv-cli": "latest",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "18.15.11",
+    "dotenv-cli": "latest",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-loader": "^9.2.3",
